# mypy-nonfloat-decimal

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
mypy_nonfloat_decimal/: __init__.py  mypy_nonfloat_decimal.py
tests/: manual_run.py  mypy.ini  test_nonfloat_decimal.yml
