[tool.poetry]
name = "mypy-nonfloat-decimal"
version = "0.1.5"
description = "Mypy plugin to prevent passing float type to Decimal to avoid imprecisions."
authors = ["yedpodtrzitko <yedpodtrzitko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
mypy = ">= 0.720"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-mypy-plugins = "^1.9.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
